Fix calling deprecated API